unified_tests/member_access_and_construction/struct_literal_field_missing_value/expect/build.text.stderr
lib.copp:6:18: error: expected expression
      User { name: }
                   ^
lib.copp:9:1: error: expected symbol
  
